--- a/statements.ipynb
+++ b/statements.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPoDGbE4YdD4+D3CqTLbEwR",
+      "authorship_tag": "ABX9TyNe6XUohlkGjM1TL9LbT/Tu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,12 +80,167 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x = 1"
+      ],
       "metadata": {
         "id": "7aD7CU4EONqE"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y = 2"
+      ],
+      "metadata": {
+        "id": "reCMhTJoOhr3"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x+y"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "31qr9qNGOiQU",
+        "outputId": "985f59d0-cb68-4cb5-e00a-3df6d4ae5590"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_list = [1, 2, 3]\n",
+        "print(my_list[0])  # Output: 1\n",
+        "print(my_list[1])  # Output: 2\n",
+        "print(my_list[-1]) # Output: 3\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7TT5leL-OjBi",
+        "outputId": "fb874e41-ecb5-4671-e8ae-dc26ed373bd1"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_dict = {1: \"one\", 2: \"two\"}\n",
+        "print(my_dict.keys())    # dict_keys([1, 2])\n",
+        "print(my_dict.values())  # dict_values(['one', 'two'])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L6FzydjYOxNg",
+        "outputId": "a35409e9-fc65-4b32-8725-735e2c4f3060"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dict_keys([1, 2])\n",
+            "dict_values(['one', 'two'])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Looping dictionary\n",
+        "for key, value in my_dict.items():\n",
+        "    print(f\"This is my key: {key}\")\n",
+        "    print(f\"This is my value: {value}\")\n",
+        "\n",
+        "# Looping list\n",
+        "for item in my_list:\n",
+        "    print(f\"This is a value in the list: {item}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wO6jeFjbOxnL",
+        "outputId": "0bdad939-f862-4275-ed7a-fabcd7933956"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This is my key: 1\n",
+            "This is my value: one\n",
+            "This is my key: 2\n",
+            "This is my value: two\n",
+            "This is a value in the list: 1\n",
+            "This is a value in the list: 2\n",
+            "This is a value in the list: 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add(x, y):\n",
+        "    return x + y\n",
+        "\n",
+        "print(add(2, 2))  # Output: 4\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9iWY2JKlOyjw",
+        "outputId": "e6ad7a37-02e3-4221-f8c5-f562b88e7561"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n"
+          ]
+        }
+      ]
     }
   ]
 }
