--- a/function.ipynb
+++ b/function.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0QBGpOuG742yJoE3j/SZZ",
+      "authorship_tag": "ABX9TyP3TNIyQPa9N99agBZlZ8F6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,167 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Styles of Functions"
+      ],
+      "metadata": {
+        "id": "2TF-QI-4Tvul"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "bWIFIWqsTn8Z"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "def simple():pass"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def simple2():\n",
+        "  print(\"simple\")"
+      ],
+      "metadata": {
+        "id": "JL23W6cNT1L1"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "simple2()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f8lA7oXcT4SF",
+        "outputId": "e0bc5181-7624-453d-99e4-7a69c252504c"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "simple\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Most useful"
+      ],
+      "metadata": {
+        "id": "PISLDqMhT7KY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def my_worker(fruit):\n",
+        "  statement = f\"My favorite meal is chicken and {fruit}\"\n",
+        "  meals={\"dinner\": statement}\n",
+        "  return meals"
+      ],
+      "metadata": {
+        "id": "RCPCYyUvT5U-"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "meal = my_worker(\"Apple\")"
+      ],
+      "metadata": {
+        "id": "TNOtS7VBUQKP"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "meal"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q89_ATovUT5Z",
+        "outputId": "a66bce05-b377-4418-8b83-594389cff53a"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'dinner': 'My favorite meal is chicken and Apple'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def human(food):\n",
+        "  consume = food[\"dinner\"]\n",
+        "  return consume"
+      ],
+      "metadata": {
+        "id": "zpTmTObeUU8i"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_meal = human(meal)\n",
+        "print(f\"I want my meal. It will be: {my_meal}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OYhmgjUaUXk5",
+        "outputId": "5b54728e-8907-428e-8aa2-ef1316f0b2fd"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I want my meal. It will be: My favorite meal is chicken and Apple\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "90CavUhgUp57"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
